# finbro-gpt

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DOCKER.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
.streamlit/: config.toml
finbro_gpt.egg-info/: PKG-INFO  SOURCES.txt
standalone_finance_bro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
