[project]
name = "finbro-gpt"
version = "1.0.0"
description = "Standalone AI-powered financial analysis tool for Vietnamese stock market"
requires-python = "==3.10.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "streamlit==1.47.0",
    "pandasai>=2.3.0",
    "openai>=1.61.0",
    "vnstock>=3.4.0",
    "altair>=5.5.0",
    "vl-convert-python>=1.6.0",
    "python-dotenv==1.0.1",
    "pyyaml>=6.0.2",
    "mplfinance>=0.12.10b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/gahoccode/finbro-gpt"
Repository = "https://github.com/gahoccode/finbro-gpt"
Issues = "https://github.com/gahoccode/finbro-gpt/issues"

[tool.ruff]
# Set the maximum line length to 88
line-length = 88
# Target Python 3.10+
target-version = "py310"
# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pycache__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "cache",
    "exports",
]

[tool.ruff.lint]
# Python-specific code review standards
select = [
    # Pyflakes - Essential Python errors
    "F401",  # Unused imports
    "F402",  # Import module from line N shadowed by loop variable
    "F403",  # 'from module import *' used; unable to detect undefined names
    "F404",  # Future import(s) name after other statements
    "F405",  # Name may be undefined, or defined from star imports
    "F811",  # Redefinition of unused name from line N
    "F821",  # Undefined name
    "F822",  # Undefined name in __all__
    "F823",  # Local variable referenced before assignment
    "F841",  # Local variable assigned but never used

    # pycodestyle - Python style issues
    "E101",  # Indentation contains mixed spaces and tabs
    "W291",  # Trailing whitespace
    "W292",  # No newline at end of file
    "W293",  # Blank line contains whitespace
]
# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Automatically detect line ending
line-ending = "auto"
# Enable docstring code formatting
docstring-code-format = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.setuptools.package-data]
"*" = ["*.py", "*.toml", "*.md"]
